# RustTestProject1_actix_crud

./: .env  Cargo.toml
migrations/2022-08-29-004750_rust_mysql_init/: up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs
src/controllers/: users_controller.rs
src/models/: users_model.rs
