[package]
name = "actix_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
diesel = { version = "1.4.4", features = ["mysql"] }
bigdecimal = "0.0.14"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


